--- a/src/Styles/BookYourPage.css
+++ b/src/Styles/BookYourPage.css
@@ -1,14 +1,11 @@
 body {
   overflow-x: hidden;
 }
-
-
-
 .container {
     max-width: 100vw;
     width: 100%;
     padding: 1rem;
-    background-color: #f9f9f9;
+    background-color: white;
     border-top: 1px solid #ddd;
     border-bottom: 1px solid #ddd;
     margin-bottom:2rem;
