--- a/src/Styles/Navbar.css
+++ b/src/Styles/Navbar.css
@@ -1,5 +1,5 @@
 .navbar-wrapper {
-    min-width: 1280px;
+    width:100%;
     background-color: white;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.05);
     position: sticky;
