--- a/src/Styles/PodcastHome.css
+++ b/src/Styles/PodcastHome.css
@@ -82,3 +82,12 @@
   color: #111827;
   background-color: white;
 }
+.price-filter{
+  border: 2px solid #66ef8b;
+  border-radius: 0.5rem;
+  padding: 0.5rem 1rem;
+  font-size: 1rem;
+  font-weight: 500;
+  color: #111827;
+  background-color: white;
+}
